# term-tasks

./: .cabal  .editorconfig  .gitignore  .hlint.yaml  README.md  ba-jiarui-liu.cabal  package.yaml  stack.yaml  term-tasks.cabal
.github/actions/spelling/: allow.txt  excludes.txt  expect.txt  patterns.txt
.github/linters/: .jscpd.json
.github/workflows/: haskell.yml  hlint.yml  linter.yml  spelling.yml  test-flex.yml
app/: CertainSignature.hs
app/Autotool/: Helpers.hs  Messages.hs  direct.hs  perturbed.hs
app/CertainSignature/: Main.hs
app/RandomSignature/: Main.hs
flex/: HaskellTerms.flex  TermsMined.flex
flex/pkg-config/: package.yaml  stack.yaml
flex/settings-gens/: HaskellTerms.hs
src/: AllTerm.hs  ArbitrarySig.hs  ArbitraryTerm.hs  Auxiliary.hs  CheckAll.hs  CheckError.hs  ComputeAllTerm.hs  ComputeTerm.hs  DataType.hs  DealWithTerm.hs  GetSignatureInfo.hs  InvalidTerm.hs  OneTerm.hs  Parser.hs  Records.hs  User.hs  ValidCheck.hs  ValidTerm.hs
src/Autotool/: Helpers.hs  Messages.hs  direct.hs  perturbed.hs
src/Tasks/: CertainSignature.hs  RandomSignature.hs
src/TermTasks/: DataType.hs  Direct.hs  Form.hs  Helpers.hs  InvalidTerm.hs  Messages.hs  Parser.hs  Perturbed.hs  Records.hs  ValidTerm.hs
test/: Spec.hs
test/Examples/: ComputeTerm.hs  Functions.hs  Signatures.hs  ValidCheck.hs
