executeable ThirdTask-exe
  hs-source-dirs:      app
  main-is:             ThirdTask.hs
  build-depends:       base
                     , split
  default-language:    Haskell2010

executeable FourthTask-exe
  hs-source-dirs:      app
  main-is:             FourthTask.hs
  build-depends:       base
                     , split
  default-language:    Haskell2010
