executeable ThirdTask-exe
  hs-source-dirs:      src
  main-is:             ThirdTask.hs
  build-depends:       base
                     , split
  default-language:    Haskell2010

executeable FourthTask-exe
  hs-source-dirs:      src
  main-is:             FourthTask.hs
  build-depends:       base
                     , split
  default-language:    Haskell2010
